# timesheet

./: .commitlintrc.json  .editorconfig  .gitignore  .gitlab-ci.yml  .releaserc.yml  Cargo.toml  LICENSE  README.md  README.md.rs  build.sh  build_linux.sh  integration.sh  justfile  myself.sh  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
.gitlab/: commitlint.yml  docker.yml  rust.yml  semantic-release.yml
.gitlab/releaserc-scripts/: prepare.sh
cli/: Cargo.toml  README.md  state.md
cli/src/: cli.rs  main.rs  table_report_weekly.rs
cli/src/commands/: configuration.rs  mod.rs  status.rs  stop_timer.rs  sync.rs
common/: Cargo.toml
common/examples/: read_journal.rs
common/src/: config.rs  date.rs  journal.rs  lib.rs
common/src/journal/: journal_csv.rs
core/: Cargo.toml
core/examples/: read_journal.rs
core/src/: config.rs  date.rs  journal.rs  lib.rs
docs/: cmd-call-sructure.md  devnotes.md  soc-notes.md
docs/sql/: statistics.sql
examples/: all_issues.rs  dbms_example.rs  dbms_tokio.rs  flat_map.rs  get_worklogs.rs  multi_get.rs  multi_get_v2.rs  parse_date.rs  range_from.rs  threads.rs  threads_v2.rs  threads_v3.rs  threads_v4.rs  threads_v5.rs  threads_v6.rs
jira/: Cargo.toml  README.md
jira/examples/: all_time_issues.rs  all_worklogs_fast.rs  components.rs  error_propagation.rs  get_worklogs.rs  insert_worklog.rs  issues_with_components.rs  jira_client.rs  multi_get.rs  parse_date.rs  range_from.rs  threads.rs  threads_v5.rs  various_expr.rs  worklogs_for_all_users.rs
jira/src/: builder.rs  config.rs  lib.rs
jira/src/models/: core.rs  issue.rs  mod.rs  project.rs  setting.rs  user.rs  worklog.rs
jira/tests/: create_issue_integration_test.rs  create_search_delete_issues.rs  get_components.rs  integration_test.rs  issue_search.rs  test_collect_authors.rs
jira/tests/test_helpers/: credentials.rs  jira_client.rs  mod.rs  test_data.rs
jira_dbms/: Cargo.toml
jira_dbms/examples/: dbms_example.rs  dbms_tokio.rs
jira_dbms/src/: lib.rs
jira_dbms/tests/: issuess_for_project_TiME.json  test_worklog_load.rs
jira_lib/: Cargo.toml
jira_lib/examples/: all_issues.rs  all_time_issues.rs  csv_write.rs  error_propagation.rs  flat_map.rs  get_worklogs.rs  insert_worklog.rs  jira_client.rs  multi_get.rs  parse_date.rs  read_journal.rs  threads.rs  threads_v2.rs  threads_v3.rs  threads_v4.rs  threads_v5.rs  threads_v6.rs  various_expr.rs
jira_lib/src/: config.rs  date.rs  date_util.rs  journal.rs  lib.rs  s01-create_jira.sql
jira_lib/src/models/: core.rs  project.rs  setting.rs  user.rs
jira_lib/tests/: all_issues_first_page.json  all_projects.json  integration_test.rs  issue_time_63.json  t.json  test_collect_authors.rs  test_get_time_tracking_options.rs  test_with_mock.rs
jira_worklog/: Cargo.toml  README.md
jira_worklog/src/: cli.rs  config.rs  date_util.rs  main.rs  table_report.rs  table_report_weekly.rs
jira_worklog/src/commands/: add.rs  configuration.rs  del.rs  mod.rs  status.rs  sync.rs
jira_worklog_etl/: Cargo.toml  Result_16.xlsx  Result_17.xlsx
jira_worklog_etl/examples/: clap_subcommands.rs
jira_worklog_etl/src/: main.rs
jira_worklog_tui/: Cargo.toml
jira_worklog_tui/src/: main.rs
journal/: Cargo.toml
journal/examples/: read.rs
journal/src/: csv.rs  lib.rs
journal_sql/: Cargo.toml
journal_sql/src/: lib.rs
local_repo/: Cargo.toml
local_repo/src/: lib.rs
local_worklog/: Cargo.toml
local_worklog/src/: lib.rs
rust-axum-backend/: Cargo.toml
rust-axum-backend/src/: main.rs
secure_credentials/: Cargo.toml
secure_credentials/examples/: read_credentials.rs  store_credential.rs
secure_credentials/src/: lib.rs  macos.rs
server/: Cargo.toml
server/src/: main.rs
src/: dbms.rs  lib.rs  main.rs  s01-create_jira.sql
tests/: issues_for_project_AA.json  test_collect_authors.rs  test_insert.rs  test_worklog_load.rs
tui/: Cargo.toml  build.rs
tui/src/: main.rs
worklog/: Cargo.toml
worklog/src/: config.rs  date.rs  error.rs  lib.rs  storage.rs  types.rs
worklog/src/operation/: add.rs  codes.rs  del.rs  issues.rs  mod.rs  sync.rs
worklog/src/repository/: component_repository.rs  database_manager.rs  issue_repository.rs  mod.rs  timer_repository.rs  user_repository.rs  worklog_repository.rs
worklog/src/repository/sqlite/: mod.rs  sqlite_component_repo.rs  sqlite_issue_repo.rs  sqlite_timer_repo.rs  sqlite_user_repo.rs  sqlite_worklog_repo.rs
worklog/src/repository/sqlite/tests/: mod.rs  schema_tests.rs
worklog/src/service/: component.rs  component_service.rs  issue.rs  issue_service.rs  mod.rs  timer.rs  user.rs  user_service.rs  worklog.rs  worklog_service.rs
worklog/src/storage/: component.rs  dbms.rs  dbms_repository.rs  issue.rs  mod.rs  user.rs  worklog.rs
worklog/src/storage/schema/: component.rs  issue.rs  issue_component.rs  mod.rs  user.rs  worklog.rs
worklog/tests/: insert_components.rs  timer_service_test.rs  worklog_service_test.rs
worklog/tests/test_helpers/: common.rs  fixtures.rs  issue_tracker.rs  mod.rs  test_cleanup.rs
worklog_lib/: Cargo.toml
worklog_lib/src/: config.rs  lib.rs
worklog_lib/tests/: test_synchronise_worklog.rs
