
[workspace]
members = [
    "jira_lib",
    "jira_worklog",
    "jira_worklog_tui",
    "rust-axum-backend",
    "secure_credentials",
]
# Set the resolver to "2" to match the 2021 edition
resolver = "2"

[workspace.package]
version = "0.9.2"

[workspace.dependencies]
tokio = { version = "1.*" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.0"
serde = { version = "1" }
serde_json = { version = "1" }
log = "0.4"
env_logger = "0.11.5"
anyhow = "1"


