
[workspace]
members = [
    "journal",
    "jira",
    "cli",
    "tui",
    "server",
    "secure_credentials",
    "worklog",
]
# Set the resolver to "2" to match the 2021 edition
resolver = "2"

[workspace.package]
# This number should be bumped automagically when using semver and "commitlint" on GitLab
version = "0.10.5"

[workspace.dependencies]
tokio = { version = "1.*" }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.0"
serde = { version = "1" }
serde_json = { version = "1" }
log = "0.4"
env_logger = "0.11.5"
anyhow = "1"
thiserror = "2"
lazy_static = { version = "1.5" }
