[package]
name = "timesheet-cli"
description = "Add, delete and get statistics about Jira worklog entries"
readme = "README.md"
authors= ["Steinar Overbeck Cook <steinar.cook@gmail.com>"]
version.workspace = true
edition = "2021"

[[bin]]
name = "timesheet"
path = "src/main.rs"

[dependencies]
jira = { path = "../jira" }
worklog = { path = "../worklog" }
clap = { version = "4.2.2", features = ["derive"] }

chrono = { workspace = true, features = ["serde"] }

log = {workspace = true}
env_logger = {  workspace = true }

tokio = { workspace = true, features = ["full"] }
