[package]
name = "core"
edition = "2021"
version.workspace = true

[dependencies]
secure_credentials = { path = "../secure_credentials" }

toml = "0.8.19"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11.5"
directories = "5.0.1"
anyhow = {workspace = true}
csv = "1.3"
chrono = {workspace = true}
num-traits = "0.2.19"
lazy_static = "1.4.0"
regex = "1"
rand = "0.8"
