[package]
name = "jira"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"]}
chrono-tz = "0.10.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3" }
urlencoding = "2"
rand = "0.8"
lazy_static = { workspace = true }
log = "0.4"
env_logger = "0.11.5"
aquamarine = "0.6.0"
url = "2.5.4"


[dev-dependencies]
mockito = "1.6.1"
