[package]
name = "jira"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.41", features = ["serde"]}
chrono-tz = "0.10.3"
reqwest = { version = "0.12.18", features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3" }
urlencoding = "2"
rand = "0.9.1"
lazy_static = { workspace = true }
log = "0.4"
env_logger = "0.11.8"
aquamarine = "0.6.0"
url = "2.5.4"
thiserror = "2.0.12"


[dev-dependencies]
mockito = "1.7.0"
