[package]
name = "jira_dbms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jira_lib = { path = "../jira_lib"}

tokio = { version = "1", features = ["full"] }

postgres = {version = "0.19", features = ["with-chrono-0_4"]}

tokio-postgres = { version="0.7", features = ["with-chrono-0_4"]}

log = "0.4"

chrono = { version = "0.4", features = ["serde"]}

base64 = { version = "0.13" }
serde_json = "1.0.128"
