[package]
name = "jira_lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using version = "1" will download the latest version of major release 1.x
serde = { version = "1", features = ["derive"] }
# Version number needs to be compatible with serde
serde_json = "1"

chrono = { version = "0.4.38", features = ["serde"]}

chrono-tz = "0.10.0"

reqwest = { version = "0.12.7", features = ["json"] }

tokio = { version = "1" }

base64 = { version = "0.22.1" }

futures = { version = "0.3" }

urlencoding = "2"

rand = "0.8"

lazy_static = "1.4.0"

log = "0.4"

env_logger = "0.11.5"

# Lightweight crate to be compatible with Postgres
postgres-types = "0.2.7"

directories = "5.0.1"

toml = "0.8.19"

csv = "1.3"

regex = "1"
