[package]
name = "jira_lib"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using version = "1" will download the latest version of major release 1.x
serde = { workspace = true, features = ["derive"] }
# Version number needs to be compatible with serde
serde_json = { workspace = true }

chrono = { workspace = true, features = ["serde"]}

chrono-tz = { workspace = true }

reqwest = { version = "0.12.7", features = ["json"] }

tokio = { workspace = true }
base64 = { version = "0.22.1" }

futures = { version = "0.3" }

urlencoding = "2"

rand = "0.8"

lazy_static = "1.4.0"

log = {  workspace = true }

env_logger = { workspace = true }

# Lightweight crate to be compatible with Postgres
postgres-types = "0.2.7"

directories = "5.0.1"

toml = "0.8.19"

csv = "1.3"

regex = "1"

aquamarine = "0.1"