[package]
name = "jira_lib"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using version = "1" will download the latest version of major release 1.x
serde = { version = "1", features = ["derive"] }
# Version number needs to be compatible with serde
serde_json = "1"
chrono = { version = "0.4.38", features = ["serde"]}
chrono-tz = "0.10.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
base64 = { version = "0.22.1" }
futures = { version = "0.3" }
urlencoding = "2"
rand = "0.8"
lazy_static = { workspace = true }
log = "0.4"
env_logger = "0.11.5"

# csv = "1.3"
#regex = "1"
aquamarine = "0.6.0"
config = "0.14.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
