[package]
name = "jira_worklog"
description = "Add, delete and get statistics about Jira worklog entries"
readme = "README.md"
authors= ["Steinar Overbeck Cook <steinar.cook@autostoresystem.com>"]
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }

chrono = { workspace = true, features = ["serde"] }

log = {workspace = true}

env_logger = {  workspace = true }

jira_lib = { path = "../jira_lib" }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
