[package]
name = "jira_worklog_etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jira_lib = { path = "../jira_lib" }
jira_dbms = { path = "../jira_dbms"}

clap = { version = "4.2.2", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"]}

log = "0.4"

env_logger = "0.10"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version="0.7", features = ["with-chrono-0_4"]}
