[package]
name = "jira_worklog_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.28.1"
jira_lib =  {path = "../jira_lib"}
worklog_lib = {path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
chrono = { workspace = true }
futures = "0.3.31"

