[package]
name = "rust-axum-backend"
edition = "2021"
version.workspace = true

[dependencies]
axum = "0.6"
tokio = { workspace = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
hyper = "0.14"
tower-http = { version = "0.3", features = ["cors"] }
chrono = { workspace = true, features = ["serde"] }
