[package]
name = "timesheet-server"
edition = "2021"
version.workspace = true

[[bin]]
name = "timesheet-server"
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { workspace = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3", features = ["cors"] }
chrono = { workspace = true, features = ["serde"] }
