[package]
name = "timesheet-server"
edition = "2021"
version.workspace = true

[[bin]]
name = "timesheet-server"
path = "src/main.rs"

[dependencies]
jira = { path = "../jira" }
worklog = { path = "../worklog" }
thiserror = { workspace = true }
axum = { version = "0.6", features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.3", features = ["cors"] }
chrono = { workspace = true, features = ["serde"] }
hyper = "1.5.1"
