[package]
name = "worklog"
edition = "2021"
version.workspace = true

[dependencies]
tokio = { workspace = true }
log = {workspace = true}

jira = { path = "../jira"}
secure_credentials = { path = "../secure_credentials" }
thiserror = { workspace = true }
anyhow = {workspace = true}
chrono = {workspace = true}
serde = { version = "1", features = ["derive"] }
directories = "6.0.0"
toml = "0.8.22"
rusqlite = { version = "0.36.0", features = ["bundled", "chrono"] }
lazy_static = "1.5.0"
num-traits = "0.2.19"
regex = "1"
url = "2.5.4"
env_logger = "0.11.8"
async-trait = "0.1.88"
