[package]
name = "worklog_lib"
edition = "2021"
version.workspace = true

[dependencies]
tokio = { workspace = true }
log = {workspace = true}

common = { path = "../common"}
jira_lib = { path = "../jira_lib"}
local_worklog = { path = "../local_repo" }
secure_credentials = { path = "../secure_credentials" }
anyhow = {workspace = true}
chrono = {workspace = true}
serde = { version = "1", features = ["derive"] }
directories = "5.0.1"
tempfile = "3"
toml = "0.8.19"
